# path_tracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  definitions.hpp  float3.hpp  geometry.cpp  geometry.hpp  main.cpp  math.hpp  random.hpp  render.cpp  render.hpp  simd.hpp  trace.cpp  trace.hpp  vec.hpp  vec3.hpp
